--- a/templates/index.html
+++ b/templates/index.html
@@ -595,6 +595,225 @@ En 2008, fundación “PORNENIR VOCES LIBRES” inauguró sus dos nuevas sucursa
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
+              NUESTRA TRAYECTORIA
+            </h3>
+            <p class="subtitle-a">
+              Eventos más relevantes de los ultimos tiempos.
+            </p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/bombon.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/bombon.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Manfred Reyes Villa 'El bombón' </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Dic. 2019</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/reconocimiento.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/reconocimiento.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Reconocimineto a la fundación “Porvenir voces libres” otorgado por la sub-alcaldía Tunari por su valioso aporte y patrocinio que hizo posible la 1ra edición de la carrera “POR UN MUNDO SIN DROGAS”.2008</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/peru.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/peru.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Trabajo conjunto con autoridades del Perú</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/peru2.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/peru2.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Trabajo conjunto con autoridades del Perú</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/turismo.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/turismo.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Proyecto de desarrollo turistico ambiental comunitario "Abriendo puertas" Sede Santa Cruz</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2018</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/bolivar.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/bolivar.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Apoyo infantil en la provincia Boliviar</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2017</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/carrera.jpeg' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/carrera.jpeg' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Estudiantes de la carrera</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2017</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="{% static 'img/plurinacional.png' %}" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="{% static 'img/plurinacional.png' %}" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Reconocimiento de la cámara de diputados de la asamblea legislativa plurinacional</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">18 Sep. 2017</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+
+
+
+      </div>
+    </div>
+  </section>
+  <!--/ Section Portfolio End /-->
+
+
+  <section id="work" class="portfolio-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
               Proyectos de apoyo social
             </h3>
             <p class="subtitle-a">
@@ -972,6 +1191,7 @@ En 2008, fundación “PORNENIR VOCES LIBRES” inauguró sus dos nuevas sucursa
     </div>
   </section>
   <!--/ Section Portfolio End /-->
+
 
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url({% static 'img/porvenir.jpeg' %})">
