--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -589,7 +589,7 @@ dinámica sociocultural de nuestros pueblos y nuestra sociedad en general en un 
                       Campo laboral
                     </h3>
                     <p class="lead">
-                    El mercado de trabajo del Licenciado en Antropología es requerido en:
+                    El mercado de trabajo del técnico superior en Antropología es requerido en:
                   </p>
                   <p class="lead">
                     •	Instituciones de salud y nutrición.
