--- a/templates/index.html
+++ b/templates/index.html
@@ -1880,13 +1880,13 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="" method="post" role="form" class="contactForm">
+                      <form action="#" method="POST" role="form" class="contactForm"> {% csrf_token %}
                       <div id="sendmessage">Tu mensaje fue enviado. Gracias!</div>
                       <div id="errormessage"></div>
                       <div class="row">
                         <div class="col-md-12 mb-3">
                           <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                            <input type="text" name="asunto" class="form-control" id="name" placeholder="Tu nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                             <div class="validation"></div>
                           </div>
                         </div>
@@ -1904,7 +1904,7 @@
                         </div>
                         <div class="col-md-12 mb-3">
                           <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Escribe tu mensaje" placeholder="Message"></textarea>
+                            <textarea class="form-control" name="mensaje" rows="5" data-rule="required" data-msg="Escribe tu mensaje" placeholder="Message"></textarea>
                             <div class="validation"></div>
                           </div>
                         </div>
