--- a/templates/index.html
+++ b/templates/index.html
@@ -1880,7 +1880,7 @@
                     </h5>
                   </div>
                   <div>
-                      <form action="#" method="POST"> {% csrf_token %}
+                      <form method="POST"> {% csrf_token %}
                       <div id="sendmessage">Tu mensaje fue enviado. Gracias!</div>
                       <div id="errormessage"></div>
                       <div class="row">
