Ong para actualizar

--- a/templates/index.html
+++ b/templates/index.html
@@ -132,12 +132,12 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="{% static 'img/oscar.png' %}" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="{% static 'img/Mendez.jpeg' %}" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Nombre: </span> <span>Oscar Quiroga</span></p>
+                      <p><span class="title-s">Nombre: </span> <span>Rodrigo Mendez</span></p>
                       <p><span class="title-s">Cargo: </span> <span>Director Financiero</span></p>
                     </div>
                   </div>
@@ -146,12 +146,12 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="{% static 'img/iris.png' %}" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="{% static 'img/eva.jpeg' %}" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Nombre: </span> <span>Iris María Calderón</span></p>
+                      <p><span class="title-s">Nombre: </span> <span>Eva Saavedra Villamil</span></p>
                       <p><span class="title-s">Cargo: </span> <span>Directora de la carrera Turismo Social Comunitario</span></p>
                     </div>
                   </div>
@@ -236,7 +236,21 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nombre: </span> <span>Sara Durán</span></p>
-                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera de ENferemería</span></p>
+                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera de Enferemería</span></p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-6 col-md-5">
+                    <div class="about-img">
+                      <img src="{% static 'img/sara.png' %}" class="img-fluid rounded b-shadow-a" alt="">
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-7">
+                    <div class="about-info">
+                      <p><span class="title-s">Nombre: </span> <span>Tomy Vocal</span></p>
+                      <p><span class="title-s">Cargo: </span> <span>Encargado de proyectos</span></p>
                     </div>
                   </div>
                 </div>
@@ -347,7 +361,7 @@
             <div class="service-content">
               <h2 class="s-title">2006</h2>
               <p class="s-description text-center">
-                Primera Campaña de alfabetizacion realizada en Cercado de la ciudad de Cochabamba con apoyo de la Gobemación de Cochabamba e Instituciones Públicas del departmento.
+                Primera Campaña de alfabetizacion realizada en Cercado de la ciudad de Cochabamba con apoyo de la Gobemación de Cochabamba e Instituciones Públicas del departamento.
               </p>
             </div>
           </div>
@@ -360,7 +374,7 @@
             <div class="service-content">
               <h2 class="s-title">2006</h2>
               <p class="s-description text-center">
-                Primer proyecto de eeconocimiento a Bachilleres de excelencia cofinanciado otorgado por la Comunidad Europea en Francia.
+                Primer proyecto de reconocimiento a Bachilleres de excelencia cofinanciado otorgado por la Comunidad Europea en Francia.
               </p>
             </div>
           </div>
@@ -425,7 +439,7 @@
             <div class="service-content">
               <h2 class="s-title">2008</h2>
               <p class="s-description text-center">
-                Primera campaña contra el hambre con colectas en Unidades Educativas e Instituciones en Apoyo a las Comunidades desfavorecidas del departmento de Cochabamba.
+                Primera campaña contra el hambre con colectas en Unidades Educativas e Instituciones en Apoyo a las Comunidades desfavorecidas del departamento de Cochabamba.
               </p>
             </div>
           </div>
@@ -981,7 +995,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Familia Zona Sur</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 21 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1005,7 +1019,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Llevamos solidaridad</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Sept. 11 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1029,7 +1043,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colaboramos a nuestras mujeres</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Abril 5 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1053,7 +1067,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colaboramos a padres trabajadores</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Marzo 24 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1077,7 +1091,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Madres de familia</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Abril 22 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1102,7 +1116,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Nuestros voluntarios</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago 5 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1126,7 +1140,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Apoyamos a los adultos mayores</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Jun. 27 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1150,7 +1164,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colaboramos a nuestras madres</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ene. 15 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1174,7 +1188,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Un barrio periurbano</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Sept. 5 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1198,7 +1212,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Studio Big Bang</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Nov. 26 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1222,7 +1236,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Ayudando a niños</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Abril 17 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1246,7 +1260,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colaborando a madres</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ene. 21 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1270,7 +1284,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Nuestra ayuda</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Jul. 22 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1294,7 +1308,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Madres trabajadoras</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">May. 4 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1319,7 +1333,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Colaborando a personas en situacion vulnerable</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">Ago. 2020</span>
+                      <span class="w-ctegory">Cochabamba</span> / <span class="w-date">May. 25 2020</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -1437,7 +1451,7 @@
               </div>
               <h3 class="card-title"><a href="blog-single.html">SUB ALCALDIA COMUNA TUNARI</a></h3>
               <p class="card-description">
-                RECONOCIMIENTO A LA FUNDACION "PORVENIR VOCES LIBRES" OTORGADO POR LA SUB ALCALDIA COMUNA TUNARI POR SU VALIOSO APOYO Y PATROCINIO QUE HIZO POSIBLE LA IRA. EDICION DE LA CARRERA: "POR UN MUNDO SIN DROGAS".
+                RECONOCIMIENTO A LA FUNDACION "PORVENIR VOCES LIBRES" OTORGADO POR LA SUB ALCALDIA COMUNA TUNARI POR SU VALIOSO APOYO Y PATROCINIO QUE HIZO POSIBLE LA 1RA. EDICION DE LA CARRERA: "POR UN MUNDO SIN DROGAS".
               </p>
             </div>
 
@@ -1932,7 +1946,7 @@
                       <li><span class="ion-ios-telephone"></span> (2) 22843244</li>
                       <li><span class="ion-ios-location"></span>SANTA CRUZ Av. Cristóbal de Mendoza, Edificio Torre Aventura piso 15-D</li>
                       <li><span class="ion-ios-telephone"></span> (3) 3313435</li>
-                      <li><span class="ion-email"></span> fundacionporvenir.ong@gmail.com</li>
+                      <li><span class="ion-email"></span>porvenir@samerica.com</li>
                     </ul>
                   </div>
                   <div class="socials">
