Subida de archivos desde windows

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,20 +146,6 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="{% static 'img/eva.jpeg' %}" class="img-fluid rounded b-shadow-a" alt="">
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-7">
-                    <div class="about-info">
-                      <p><span class="title-s">Nombre: </span> <span>Eva Saavedra Villamil</span></p>
-                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera Turismo Social Comunitario</span></p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-sm-6 col-md-5">
-                    <div class="about-img">
                       <img src="{% static 'img/elina.png' %}" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
@@ -244,13 +230,27 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="{% static 'img/sara.png' %}" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="{% static 'img/tomy.jpeg' %}" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nombre: </span> <span>Tomy Vocal</span></p>
                       <p><span class="title-s">Cargo: </span> <span>Encargado de proyectos</span></p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-6 col-md-5">
+                    <div class="about-img">
+                      <img src="{% static 'img/eva.jpeg' %}" class="img-fluid rounded b-shadow-a" alt="">
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-7">
+                    <div class="about-info">
+                      <p><span class="title-s">Nombre: </span> <span>Eva Saavedra Villamil</span></p>
+                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera Turismo Social Comunitario</span></p>
                     </div>
                   </div>
                 </div>
