Agregado de carrera periodismo

--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -114,10 +114,8 @@
                         <li><a href="#enfermería">Enfermería</a></li>
 						<li><a href="#sistemas">Analista de sistemas</a>
                         <li><a href="#antropologia">Antropología</a>
-							<ul>
-								<li><a href="">Perfil Profesional</a></li>
-								<li><a href="">Campo laboral</a></li>
-							</ul>
+                        <li><a href="#periodismo">Periodismo y comunicación</a>
+
 						</li>
 					</ul>
 				</li>
@@ -633,6 +631,59 @@ dinámica sociocultural de nuestros pueblos y nuestra sociedad en general en un 
                             <img src="{% static 'img/antro.jpeg' %}">
                         </center>
                     </div>
+                </div>
+              </div>
+
+  </section>
+
+  <section id="periodismo" class="about-mf sect-pt4 route">
+    <div class="container">
+
+
+                <div class="about-me pt-4 pt-md-0">
+                  <div class="title-box-2">
+                    <h5 class="title-left">
+                      Periodismo y comunicación
+                    </h5>
+                  </div>
+
+                    <div>
+                    <h3>
+                      Perfíl profesional
+                    </h3>
+                  </div>
+                  <p class="lead">
+                    •	Articular procesos de comunicación desde diversas perspectivas..
+                  </p>
+                    <p class="lead">
+                    •	Dominar los campos de la información, opinión, investigación e interpretación, así como la realización de proyectos.
+                  </p>
+                  <p class="lead">
+                    •	Producir material periodístico para diversos medios de comunicación y plataformas.
+                  </p>
+                  <p class="lead">
+                    •	Desempeñarte en las diversas funciones vinculadas al diseño, producción, edición y realización de propuestas comunicativas y periodísticas.
+                  </p>
+                    <h3>
+                      Campo laboral
+                    </h3>
+                    <p class="lead">
+                    Estos estudios te abren las puertas para trabajar como: administrador y gestor de su propio emprendimiento, gerente de medios de comunicación, consultor en emprendimientos privados, asesor en comunicación corporativa, experto en servicios comunicacionales on line, director de consultoras y gabinetes de comunicación, experto en imagen y relaciones públicas, y otras más.
+                  </p>
+                  <center>
+                        <h3>
+                      Plan de estudios
+                    </h3>
+                    </center>
+
+                    <div>
+                        <center>
+                            <img src="{% static 'img/periodismo.jpeg' %}">
+                        </center>
+                    </div>
+
+
+
                 </div>
               </div>
 
