Arreglo de enfermeria en descripcion de cargo

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Nombre: </span> <span>Patricia Zurita </span></p>
+                      <p><span class="title-s">Nombre: </span> <span>Jaqueline Patricia Zurita Ponce </span></p>
                       <p><span class="title-s">Cargo: </span> <span>Directora Ejecutiva de la fundacion "Porvenir Voces Libres"</span></p>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nombre: </span> <span>Sara Durán</span></p>
-                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera de Enferemería</span></p>
+                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera de Enfermería</span></p>
                     </div>
                   </div>
                 </div>
@@ -250,7 +250,7 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Nombre: </span> <span>Eva Saavedra Villamil</span></p>
-                      <p><span class="title-s">Cargo: </span> <span>Directora de la carrera Turismo Social Comunitario</span></p>
+                      <p><span class="title-s">Cargo: </span> <span>Directora de carrera de periodismo y comunicación social</span></p>
                     </div>
                   </div>
                 </div>
